--- a/index.html
+++ b/index.html
@@ -1,37 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
-
-  </head>
-</html>
-
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Weather App</title>
+    <link rel="stylesheet" href="style.css">
+</head>
 <body>
-  
-    <section class="top-banner">
+    <div class="jumbotron jumbotron-fluid">
         <div class="container">
-          <h1 class="heading">Simple Weather App</h1>
-          <form>
-            <input type="text" placeholder="Search for a city" autofocus>
-            <button type="submit">SUBMIT</button>
-            <span class="msg"></span>
-          </form>
+          <h1 class="display-4">Weather Dashboard</h1>
+          <p class="lead">This will provide you with the current weather and a 5 day forecast for the searched city.</p>
         </div>
-      </section>
-      <section class="ajax-section">
-        <div class="container">
-          <ul class="cities"></ul>
+      </div>
+      <nav class="navbar navbar-light bg-light">
+        <div class="form-inline">
+          <input class="form-control mr-sm-2" 
+          id="city-name" 
+          type="search" 
+          placeholder="Search for a City" 
+          aria-label="Search">
+          <button class="btn btn-outline-success my-2 my-sm-0" 
+          id="searchBtn" 
+          type="submit">Search</button>
+          <button class="btn btn-outline-success mb-3" 
+          id="clearHistoryBtn" 
+          type="submit">Clear History</button>
+          <div id="history">  
+          </div>
         </div>
-      </section>
+    </nav>
+        <form class="col-10">
+            <div class="row currentCity">
+            <div class="col-12">
+            <span id="currentCity"></span>    
+            </div>
+            </div>
+            <div class="col-10">
+                <div class="rowTemp">
+                <div class="col-12">
+                <span id="temp"></span>    
+                </div>
+                </div>
+                <div class="col-10">
+                    <div class="rowHum">
+                    <div class="col-12">
+                    <span id="humidity"></span>    
+                    </div>
+                    </div>
+                    <div class="col-10">
+                        <div class="rowUv">
+                        <div class="col-12">
+                        <span id="uvi"></span>    
+                        </div>
+                        </div>
+        </div>
+</div>
+</div>
+</form>
+<div class="forecastContainer">
+    <div class="col-md-4">
+    </div>
+        <div class="col-md-8">
+            <div id="dashboard"></div>
+            <div id="forecast" class="row">
+                <h3>5 Day Forecast</h3>
+                <!-- <div class="col">
+                <div class="bg-primary rounded p-5">
+                <h4> 3/11/2021</h4>
+                <img src="" alt=""/>
+                <p> temp</p>
+                <p> humidity</p>
+    </div>
+  </div> -->
+  </div>
+  </div>    
+  <script src="script.js"></script> 
 </body>
-
-<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-<script src="script.js"></script>
+</html>
